@@ -6,6 +6,7 @@ import org.slf4j.LoggerFactory;
 
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -27,9 +28,9 @@ public class HttpUtils {
         for (final String pair : pairs) {
             final String[] parts = pair.split("=", 2);
             try {
-                final String key = URLDecoder.decode(parts[0], "UTF-8");
+                final String key = URLDecoder.decode(parts[0], StandardCharsets.UTF_8);
                 if (parts.length == 2) {
-                    queryParameters.put(key, URLDecoder.decode(parts[1], "UTF-8"));
+                    queryParameters.put(key, URLDecoder.decode(parts[1], StandardCharsets.UTF_8));
                 } else {
                     queryParameters.put(key, "");
                 }
